database and journal scraping