@@ -24,6 +24,7 @@ plugins {
     id 'org.gradlex.extra-java-module-info'
     id 'org.jsonschema2pojo'
     id 'net.rdrei.android.buildtimetracker' version '0.11.0'
+    id('io.ebean') version "$version_ebean"
 }
 
 //compileSass.configure {
@@ -346,6 +347,14 @@ dependencies {
     implementation 'nl.jixxed.ed.confidential:ed-confidential-api:1.3'
     implementation 'me.xdrop:fuzzywuzzy'
     implementation 'org.apache.maven:maven-artifact'
+    implementation 'org.xerial:sqlite-jdbc'
+    implementation "io.ebean:ebean"
+    implementation 'io.ebean:ebean-migration'
+
+    annotationProcessor 'io.ebean:querybean-generator'
+
+    testImplementation 'io.avaje:junit:1.1'
+    testImplementation 'io.ebean:ebean-test'
 
     if (proprietary) {
         implementation 'nl.jixxed.ed.awesome:ed-awesome-impl:1.25'
@@ -353,6 +362,11 @@ dependencies {
     }
 
 }
+
+ebean {
+    debugLevel = 0 //0 - 9
+}
+
 tasks.named("jpackage").configure {
     if (os.isWindows()) {
         dependsOn tasks.named('test')
@@ -785,6 +799,7 @@ tasks.withType(JavaExec).configureEach {
     jvmArgs += "--enable-native-access=com.sun.jna"
     jvmArgs += "--enable-native-access=javafx.graphics,javafx.media"
     jvmArgs += "--enable-native-access=org.openpnp"
+    jvmArgs += "--enable-native-access=org.xerial.sqlitejdbc"
 }
 afterEvaluate {
     generateEffectiveLombokConfig.mustRunAfter generateJsonSchema2Pojo
